Fix errors not showing and searhc ins SearchableSelect component

--- a/resources/assets/scss/global/inputs.scss
+++ b/resources/assets/scss/global/inputs.scss
@@ -542,3 +542,8 @@
     padding: 0;
     color: inherit;
 }
+
+.error-message {
+    color: $color-text-error;
+    font-size: 13px;
+}
